@@ -1,13 +1,16 @@
 package com.security.SecurityApp.entity;
 
+import com.security.SecurityApp.entity.Role.UserRole;
 import jakarta.persistence.*;
 import lombok.*;
 import org.hibernate.annotations.Generated;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 @Entity
 @Table(name = "users")
@@ -26,9 +29,13 @@ public class User implements UserDetails {
     private String password;
     private String name;
 
+    @Enumerated(EnumType.STRING)
+    private UserRole role = UserRole.USER;
+
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+
+        return List.of(new SimpleGrantedAuthority("ROLE_"+role.name()));
     }
 
     @Override
